[FIX] website: fix scrolling issue on mobile devices
Since commit [1], where the frontend scrolling was moved back out of the
'#wrapwrap', an issue sometimes occurs with the standard effect when
scrolling on mobile page.

Steps to reproduce:

- Go to a website with "e-commerce" installed.
- Use the devtools to display the website on a mobile device (note that
the bug may only occur on certain mobile devices, so it might be
necessary to test several to reproduce it).
- Add a product to the cart and go to the "/shop/checkout" page.
- Try scrolling down.
- Bug: scrolling is blocked.

The bug happens because, when the page starts scrolling with the
"standard" header, there’s a short moment when the header has a
"translate: transform" applied but is not yet "affixed." This creates a
new coordinate system for the header and affects its child elements,
like the "off-canvas mobile" navbar. As a result, the
"off-canvas mobile" navbar temporarily changes the page size, which
causes scrolling issues, especially on mobile devices.

To fix this, we add "display: none" to the "off-canvas mobile" navbar
during this short moment so it no longer affects the page size.

[1]: https://github.com/odoo/odoo/commit/189a7c96e6e26825dc05c0c6466576fe63aa091e

opw-4303667
opw-4305493

X-original-commit: dca8bdd79a634974a9e15ac1117fddc471147882

--- a/addons/website/static/src/scss/website.scss
+++ b/addons/website/static/src/scss/website.scss
@@ -1455,6 +1455,20 @@ header {
     &.o_header_is_scrolled, &.o_transitioning.o_header_affixed {
         background-color: transparent !important;
     }
+    // When the page starts scrolling with the "standard" header, there’s a
+    // brief moment where the header has a "translate: transform" applied
+    // without being "affixed" yet. This causes the "off-canvas mobile" navbar
+    // to temporarily increase the page size, creating sometimes a scrolling bug
+    // that prevents further scrolling (e.g. "checkout shop" page on mobile
+    // device). To prevent this bug, we add a "display: none" to the "off-canvas
+    // mobile" navbar so it no longer affects the page dimensions. TODO: Check
+    // if this code can be removed once the "#wrapwrap" element is permanently
+    // removed.
+    &.o_transformed_not_affixed {
+        .o_navbar_mobile {
+            display: none;
+        }
+    }
 }
 
 @if o-website-value('header-template') == 'sidebar' {
